--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ asgiref==3.6.0
 asttokens==2.4.1
 astunparse==1.6.3
 attrs==23.1.0
+backcall==0.2.0
 bcrypt==4.1.2
+beautifulsoup4==4.12.3
+bleach==6.1.0
 blinker==1.7.0
 CacheControl==0.13.1
 cachetools==5.3.1
@@ -20,14 +23,17 @@ contourpy==1.0.7
 cryptography==41.0.1
 cycler==0.11.0
 decorator==5.1.1
+defusedxml==0.7.1
 dicttoxml2==2.1.0
 distlib==0.3.8
 distro==1.8.0
 Django==4.1.7
 django-qr-code==3.1.1
 dnspython==2.3.0
+docopt==0.6.2
 et-xmlfile==1.1.0
 executing==2.0.1
+fastjsonschema==2.19.1
 filelock==3.13.1
 firebase==4.0.1
 firebase-admin==6.2.0
@@ -72,13 +78,18 @@ httplib2==0.22.0
 httpx==0.25.2
 huggingface-hub==0.20.3
 idna==3.4
-ipython==8.20.0
+ipython==8.12.3
 isodate==0.6.1
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
 jsonpickle==1.5.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 keras==2.15.0
 kiwisolver==1.4.4
 libclang==16.0.6
@@ -87,12 +98,16 @@ Markdown==3.4.3
 MarkupSafe==2.1.2
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
+mistune==3.0.2
 ml-dtypes==0.2.0
 msgpack==1.0.5
 multidict==6.0.4
 mwparserfromhell==0.6.4
 mysql-connector-python==8.0.32
 mysqlclient==2.1.1
+nbclient==0.10.0
+nbconvert==7.16.3
+nbformat==5.10.3
 nltk==3.8.1
 node==1.2.1
 numpy==1.24.2
@@ -104,8 +119,11 @@ openpyxl==3.1.2
 opt-einsum==3.3.0
 packaging==23.0
 pandas==2.0.3
+pandocfilters==1.5.1
 parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.5.0
+pipreqs==0.5.0
 platformdirs==4.1.0
 plumber==1.7
 prompt-toolkit==3.0.43
@@ -125,16 +143,20 @@ pylatexenc==2.10
 pymongo==3.11.0
 pyparsing==3.0.9
 pypng==0.20220715.0
-python-dateutil==3.7.0
-python-dotenv==3.7.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
+pywin32==306
 PyYAML==6.0
 pyzbar==0.1.9
+pyzmq==25.1.2
 qrcode==7.4.2
+referencing==0.34.0
 regex==2023.3.23
 requests==2.28.2
 requests-oauthlib==1.3.1
+rpds-py==0.18.0
 rsa==4.9
 safetensors==0.4.2
 scikit-learn==1.4.1.post1
@@ -143,19 +165,22 @@ segno==1.5.2
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.27
 sqlparse==0.4.3
 stack-data==0.6.3
 tabulate==0.9.0
 tensorboard==2.15.1
-tensorboard-data-server==2.15.0
+tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
 tensorflow-intel==2.15.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.3.0
+tinycss2==1.2.1
 tokenizers==0.15.1
+tornado==6.4
 tqdm==4.66.1
 traitlets==5.14.1
 transformers==4.37.2
@@ -167,11 +192,13 @@ urllib3==1.26.15
 virtualenv==20.25.0
 waitress==2.1.2
 wcwidth==0.2.6
+webencodings==0.5.1
 Werkzeug==3.0.1
 wikitextparser==0.51.1
 wrapt==1.14.1
 WTForms==3.0.1
 xlrd==2.0.1
+yarg==0.1.9
 yarl==1.9.3
 zope.component==6.0
 zope.deferredimport==4.4
