--- a/requirements.txt
+++ b/requirements.txt
@@ -147,7 +147,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2023.3
 pytz-deprecation-shim==0.1.0.post0
-pywin32==306
+pywin32
 PyYAML==6.0
 pyzbar==0.1.9
 pyzmq==25.1.2
