--- a/.github/workflows/master_academicadvisor.yml
+++ b/.github/workflows/master_academicadvisor.yml
@@ -8,6 +8,10 @@ on:
   push:
     branches:
       - master
+    paths:
+      -'main/**'
+      -requirements.txt
+      -startup.txt
   workflow_dispatch:
 
 jobs:
@@ -58,6 +62,11 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
+
+      - name: Log in to Azure CLI using service principal
+        uses: azure/login@v1
+        with:
+          creds: ${{secrets.AZURE_CREDENTIALS }}
 
       
       - name: 'Deploy to Azure Web App'
